r_interpreter/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements NEWLINE statement
Rule 3     statements -> statement
Rule 4     statement -> IDENTIFIER ASSIGN expression
Rule 5     statement -> expression
Rule 6     statement -> empty
Rule 7     statement -> IF LPAREN expression RPAREN statement
Rule 8     statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 9     statement -> WHILE LPAREN expression RPAREN statement
Rule 10    statement -> FOR LPAREN IDENTIFIER IN expression RPAREN statement
Rule 11    statement -> LBRACE statements RBRACE
Rule 12    statement -> LBRACE RBRACE
Rule 13    expression -> expression PLUS expression
Rule 14    expression -> expression MINUS expression
Rule 15    expression -> expression TIMES expression
Rule 16    expression -> expression DIVIDE expression
Rule 17    expression -> expression GT expression
Rule 18    expression -> expression LT expression
Rule 19    expression -> expression GE expression
Rule 20    expression -> expression LE expression
Rule 21    expression -> expression EQ expression
Rule 22    expression -> expression NE expression
Rule 23    expression -> LPAREN expression RPAREN
Rule 24    expression -> NUMBER
Rule 25    expression -> STRING
Rule 26    expression -> IDENTIFIER
Rule 27    expression -> IDENTIFIER LPAREN args RPAREN
Rule 28    args -> args COMMA expression
Rule 29    args -> expression
Rule 30    args -> empty
Rule 31    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 4
COMMA                : 28
DIVIDE               : 16
ELSE                 : 8
EQ                   : 21
FOR                  : 10
GE                   : 19
GT                   : 17
IDENTIFIER           : 4 10 26 27
IF                   : 7 8
IN                   : 10
LBRACE               : 11 12
LE                   : 20
LPAREN               : 7 8 9 10 23 27
LT                   : 18
MINUS                : 14
NE                   : 22
NEWLINE              : 2
NUMBER               : 24
PLUS                 : 13
RBRACE               : 11 12
RPAREN               : 7 8 9 10 23 27
STRING               : 25
TIMES                : 15
WHILE                : 9
error                : 

Nonterminals, with rules where they appear

args                 : 27 28
empty                : 6 30
expression           : 4 5 7 8 9 10 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 28 29
program              : 0
statement            : 2 3 7 8 8 9 10
statements           : 1 2 11

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements NEWLINE statement
    (3) statements -> . statement
    (4) statement -> . IDENTIFIER ASSIGN expression
    (5) statement -> . expression
    (6) statement -> . empty
    (7) statement -> . IF LPAREN expression RPAREN statement
    (8) statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (9) statement -> . WHILE LPAREN expression RPAREN statement
    (10) statement -> . FOR LPAREN IDENTIFIER IN expression RPAREN statement
    (11) statement -> . LBRACE statements RBRACE
    (12) statement -> . LBRACE RBRACE
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GT expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GE expression
    (20) expression -> . expression LE expression
    (21) expression -> . expression EQ expression
    (22) expression -> . expression NE expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . NUMBER
    (25) expression -> . STRING
    (26) expression -> . IDENTIFIER
    (27) expression -> . IDENTIFIER LPAREN args RPAREN
    (31) empty -> .

    IDENTIFIER      shift and go to state 4
    IF              shift and go to state 7
    WHILE           shift and go to state 9
    FOR             shift and go to state 10
    LBRACE          shift and go to state 11
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 12
    STRING          shift and go to state 13
    NEWLINE         reduce using rule 31 (empty -> .)
    $end            reduce using rule 31 (empty -> .)

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    expression                     shift and go to state 5
    empty                          shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . NEWLINE statement

    $end            reduce using rule 1 (program -> statements .)
    NEWLINE         shift and go to state 14


state 3

    (3) statements -> statement .

    NEWLINE         reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    RBRACE          reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> IDENTIFIER . ASSIGN expression
    (26) expression -> IDENTIFIER .
    (27) expression -> IDENTIFIER . LPAREN args RPAREN

    ASSIGN          shift and go to state 15
    PLUS            reduce using rule 26 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 26 (expression -> IDENTIFIER .)
    TIMES           reduce using rule 26 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 26 (expression -> IDENTIFIER .)
    GT              reduce using rule 26 (expression -> IDENTIFIER .)
    LT              reduce using rule 26 (expression -> IDENTIFIER .)
    GE              reduce using rule 26 (expression -> IDENTIFIER .)
    LE              reduce using rule 26 (expression -> IDENTIFIER .)
    EQ              reduce using rule 26 (expression -> IDENTIFIER .)
    NE              reduce using rule 26 (expression -> IDENTIFIER .)
    NEWLINE         reduce using rule 26 (expression -> IDENTIFIER .)
    $end            reduce using rule 26 (expression -> IDENTIFIER .)
    RBRACE          reduce using rule 26 (expression -> IDENTIFIER .)
    ELSE            reduce using rule 26 (expression -> IDENTIFIER .)
    LPAREN          shift and go to state 16


state 5

    (5) statement -> expression .
    (13) expression -> expression . PLUS expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . TIMES expression
    (16) expression -> expression . DIVIDE expression
    (17) expression -> expression . GT expression
    (18) expression -> expression . LT expression
    (19) expression -> expression . GE expression
    (20) expression -> expression . LE expression
    (21) expression -> expression . EQ expression
    (22) expression -> expression . NE expression

    NEWLINE         reduce using rule 5 (statement -> expression .)
    $end            reduce using rule 5 (statement -> expression .)
    RBRACE          reduce using rule 5 (statement -> expression .)
    ELSE            reduce using rule 5 (statement -> expression .)
    PLUS            shift and go to state 17
    MINUS           shift and go to state 18
    TIMES           shift and go to state 19
    DIVIDE          shift and go to state 20
    GT              shift and go to state 21
    LT              shift and go to state 22
    GE              shift and go to state 23
    LE              shift and go to state 24
    EQ              shift and go to state 25
    NE              shift and go to state 26


state 6

    (6) statement -> empty .

    NEWLINE         reduce using rule 6 (statement -> empty .)
    $end            reduce using rule 6 (statement -> empty .)
    RBRACE          reduce using rule 6 (statement -> empty .)
    ELSE            reduce using rule 6 (statement -> empty .)


state 7

    (7) statement -> IF . LPAREN expression RPAREN statement
    (8) statement -> IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN          shift and go to state 27


state 8

    (23) expression -> LPAREN . expression RPAREN
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GT expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GE expression
    (20) expression -> . expression LE expression
    (21) expression -> . expression EQ expression
    (22) expression -> . expression NE expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . NUMBER
    (25) expression -> . STRING
    (26) expression -> . IDENTIFIER
    (27) expression -> . IDENTIFIER LPAREN args RPAREN

    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 12
    STRING          shift and go to state 13
    IDENTIFIER      shift and go to state 29

    expression                     shift and go to state 28

state 9

    (9) statement -> WHILE . LPAREN expression RPAREN statement

    LPAREN          shift and go to state 30


state 10

    (10) statement -> FOR . LPAREN IDENTIFIER IN expression RPAREN statement

    LPAREN          shift and go to state 31


state 11

    (11) statement -> LBRACE . statements RBRACE
    (12) statement -> LBRACE . RBRACE
    (2) statements -> . statements NEWLINE statement
    (3) statements -> . statement
    (4) statement -> . IDENTIFIER ASSIGN expression
    (5) statement -> . expression
    (6) statement -> . empty
    (7) statement -> . IF LPAREN expression RPAREN statement
    (8) statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (9) statement -> . WHILE LPAREN expression RPAREN statement
    (10) statement -> . FOR LPAREN IDENTIFIER IN expression RPAREN statement
    (11) statement -> . LBRACE statements RBRACE
    (12) statement -> . LBRACE RBRACE
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GT expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GE expression
    (20) expression -> . expression LE expression
    (21) expression -> . expression EQ expression
    (22) expression -> . expression NE expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . NUMBER
    (25) expression -> . STRING
    (26) expression -> . IDENTIFIER
    (27) expression -> . IDENTIFIER LPAREN args RPAREN
    (31) empty -> .

  ! shift/reduce conflict for RBRACE resolved as shift
    RBRACE          shift and go to state 33
    IDENTIFIER      shift and go to state 4
    IF              shift and go to state 7
    WHILE           shift and go to state 9
    FOR             shift and go to state 10
    LBRACE          shift and go to state 11
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 12
    STRING          shift and go to state 13
    NEWLINE         reduce using rule 31 (empty -> .)

  ! RBRACE          [ reduce using rule 31 (empty -> .) ]

    statements                     shift and go to state 32
    statement                      shift and go to state 3
    expression                     shift and go to state 5
    empty                          shift and go to state 6

state 12

    (24) expression -> NUMBER .

    PLUS            reduce using rule 24 (expression -> NUMBER .)
    MINUS           reduce using rule 24 (expression -> NUMBER .)
    TIMES           reduce using rule 24 (expression -> NUMBER .)
    DIVIDE          reduce using rule 24 (expression -> NUMBER .)
    GT              reduce using rule 24 (expression -> NUMBER .)
    LT              reduce using rule 24 (expression -> NUMBER .)
    GE              reduce using rule 24 (expression -> NUMBER .)
    LE              reduce using rule 24 (expression -> NUMBER .)
    EQ              reduce using rule 24 (expression -> NUMBER .)
    NE              reduce using rule 24 (expression -> NUMBER .)
    NEWLINE         reduce using rule 24 (expression -> NUMBER .)
    $end            reduce using rule 24 (expression -> NUMBER .)
    RPAREN          reduce using rule 24 (expression -> NUMBER .)
    RBRACE          reduce using rule 24 (expression -> NUMBER .)
    ELSE            reduce using rule 24 (expression -> NUMBER .)
    COMMA           reduce using rule 24 (expression -> NUMBER .)


state 13

    (25) expression -> STRING .

    PLUS            reduce using rule 25 (expression -> STRING .)
    MINUS           reduce using rule 25 (expression -> STRING .)
    TIMES           reduce using rule 25 (expression -> STRING .)
    DIVIDE          reduce using rule 25 (expression -> STRING .)
    GT              reduce using rule 25 (expression -> STRING .)
    LT              reduce using rule 25 (expression -> STRING .)
    GE              reduce using rule 25 (expression -> STRING .)
    LE              reduce using rule 25 (expression -> STRING .)
    EQ              reduce using rule 25 (expression -> STRING .)
    NE              reduce using rule 25 (expression -> STRING .)
    NEWLINE         reduce using rule 25 (expression -> STRING .)
    $end            reduce using rule 25 (expression -> STRING .)
    RPAREN          reduce using rule 25 (expression -> STRING .)
    RBRACE          reduce using rule 25 (expression -> STRING .)
    ELSE            reduce using rule 25 (expression -> STRING .)
    COMMA           reduce using rule 25 (expression -> STRING .)


state 14

    (2) statements -> statements NEWLINE . statement
    (4) statement -> . IDENTIFIER ASSIGN expression
    (5) statement -> . expression
    (6) statement -> . empty
    (7) statement -> . IF LPAREN expression RPAREN statement
    (8) statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (9) statement -> . WHILE LPAREN expression RPAREN statement
    (10) statement -> . FOR LPAREN IDENTIFIER IN expression RPAREN statement
    (11) statement -> . LBRACE statements RBRACE
    (12) statement -> . LBRACE RBRACE
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GT expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GE expression
    (20) expression -> . expression LE expression
    (21) expression -> . expression EQ expression
    (22) expression -> . expression NE expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . NUMBER
    (25) expression -> . STRING
    (26) expression -> . IDENTIFIER
    (27) expression -> . IDENTIFIER LPAREN args RPAREN
    (31) empty -> .

    IDENTIFIER      shift and go to state 4
    IF              shift and go to state 7
    WHILE           shift and go to state 9
    FOR             shift and go to state 10
    LBRACE          shift and go to state 11
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 12
    STRING          shift and go to state 13
    NEWLINE         reduce using rule 31 (empty -> .)
    $end            reduce using rule 31 (empty -> .)
    RBRACE          reduce using rule 31 (empty -> .)

    statement                      shift and go to state 34
    expression                     shift and go to state 5
    empty                          shift and go to state 6

state 15

    (4) statement -> IDENTIFIER ASSIGN . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GT expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GE expression
    (20) expression -> . expression LE expression
    (21) expression -> . expression EQ expression
    (22) expression -> . expression NE expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . NUMBER
    (25) expression -> . STRING
    (26) expression -> . IDENTIFIER
    (27) expression -> . IDENTIFIER LPAREN args RPAREN

    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 12
    STRING          shift and go to state 13
    IDENTIFIER      shift and go to state 29

    expression                     shift and go to state 35

state 16

    (27) expression -> IDENTIFIER LPAREN . args RPAREN
    (28) args -> . args COMMA expression
    (29) args -> . expression
    (30) args -> . empty
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GT expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GE expression
    (20) expression -> . expression LE expression
    (21) expression -> . expression EQ expression
    (22) expression -> . expression NE expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . NUMBER
    (25) expression -> . STRING
    (26) expression -> . IDENTIFIER
    (27) expression -> . IDENTIFIER LPAREN args RPAREN
    (31) empty -> .

    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 12
    STRING          shift and go to state 13
    IDENTIFIER      shift and go to state 29
    RPAREN          reduce using rule 31 (empty -> .)
    COMMA           reduce using rule 31 (empty -> .)

    args                           shift and go to state 36
    expression                     shift and go to state 37
    empty                          shift and go to state 38

state 17

    (13) expression -> expression PLUS . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GT expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GE expression
    (20) expression -> . expression LE expression
    (21) expression -> . expression EQ expression
    (22) expression -> . expression NE expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . NUMBER
    (25) expression -> . STRING
    (26) expression -> . IDENTIFIER
    (27) expression -> . IDENTIFIER LPAREN args RPAREN

    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 12
    STRING          shift and go to state 13
    IDENTIFIER      shift and go to state 29

    expression                     shift and go to state 39

state 18

    (14) expression -> expression MINUS . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GT expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GE expression
    (20) expression -> . expression LE expression
    (21) expression -> . expression EQ expression
    (22) expression -> . expression NE expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . NUMBER
    (25) expression -> . STRING
    (26) expression -> . IDENTIFIER
    (27) expression -> . IDENTIFIER LPAREN args RPAREN

    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 12
    STRING          shift and go to state 13
    IDENTIFIER      shift and go to state 29

    expression                     shift and go to state 40

state 19

    (15) expression -> expression TIMES . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GT expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GE expression
    (20) expression -> . expression LE expression
    (21) expression -> . expression EQ expression
    (22) expression -> . expression NE expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . NUMBER
    (25) expression -> . STRING
    (26) expression -> . IDENTIFIER
    (27) expression -> . IDENTIFIER LPAREN args RPAREN

    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 12
    STRING          shift and go to state 13
    IDENTIFIER      shift and go to state 29

    expression                     shift and go to state 41

state 20

    (16) expression -> expression DIVIDE . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GT expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GE expression
    (20) expression -> . expression LE expression
    (21) expression -> . expression EQ expression
    (22) expression -> . expression NE expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . NUMBER
    (25) expression -> . STRING
    (26) expression -> . IDENTIFIER
    (27) expression -> . IDENTIFIER LPAREN args RPAREN

    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 12
    STRING          shift and go to state 13
    IDENTIFIER      shift and go to state 29

    expression                     shift and go to state 42

state 21

    (17) expression -> expression GT . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GT expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GE expression
    (20) expression -> . expression LE expression
    (21) expression -> . expression EQ expression
    (22) expression -> . expression NE expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . NUMBER
    (25) expression -> . STRING
    (26) expression -> . IDENTIFIER
    (27) expression -> . IDENTIFIER LPAREN args RPAREN

    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 12
    STRING          shift and go to state 13
    IDENTIFIER      shift and go to state 29

    expression                     shift and go to state 43

state 22

    (18) expression -> expression LT . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GT expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GE expression
    (20) expression -> . expression LE expression
    (21) expression -> . expression EQ expression
    (22) expression -> . expression NE expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . NUMBER
    (25) expression -> . STRING
    (26) expression -> . IDENTIFIER
    (27) expression -> . IDENTIFIER LPAREN args RPAREN

    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 12
    STRING          shift and go to state 13
    IDENTIFIER      shift and go to state 29

    expression                     shift and go to state 44

state 23

    (19) expression -> expression GE . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GT expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GE expression
    (20) expression -> . expression LE expression
    (21) expression -> . expression EQ expression
    (22) expression -> . expression NE expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . NUMBER
    (25) expression -> . STRING
    (26) expression -> . IDENTIFIER
    (27) expression -> . IDENTIFIER LPAREN args RPAREN

    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 12
    STRING          shift and go to state 13
    IDENTIFIER      shift and go to state 29

    expression                     shift and go to state 45

state 24

    (20) expression -> expression LE . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GT expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GE expression
    (20) expression -> . expression LE expression
    (21) expression -> . expression EQ expression
    (22) expression -> . expression NE expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . NUMBER
    (25) expression -> . STRING
    (26) expression -> . IDENTIFIER
    (27) expression -> . IDENTIFIER LPAREN args RPAREN

    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 12
    STRING          shift and go to state 13
    IDENTIFIER      shift and go to state 29

    expression                     shift and go to state 46

state 25

    (21) expression -> expression EQ . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GT expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GE expression
    (20) expression -> . expression LE expression
    (21) expression -> . expression EQ expression
    (22) expression -> . expression NE expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . NUMBER
    (25) expression -> . STRING
    (26) expression -> . IDENTIFIER
    (27) expression -> . IDENTIFIER LPAREN args RPAREN

    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 12
    STRING          shift and go to state 13
    IDENTIFIER      shift and go to state 29

    expression                     shift and go to state 47

state 26

    (22) expression -> expression NE . expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GT expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GE expression
    (20) expression -> . expression LE expression
    (21) expression -> . expression EQ expression
    (22) expression -> . expression NE expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . NUMBER
    (25) expression -> . STRING
    (26) expression -> . IDENTIFIER
    (27) expression -> . IDENTIFIER LPAREN args RPAREN

    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 12
    STRING          shift and go to state 13
    IDENTIFIER      shift and go to state 29

    expression                     shift and go to state 48

state 27

    (7) statement -> IF LPAREN . expression RPAREN statement
    (8) statement -> IF LPAREN . expression RPAREN statement ELSE statement
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GT expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GE expression
    (20) expression -> . expression LE expression
    (21) expression -> . expression EQ expression
    (22) expression -> . expression NE expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . NUMBER
    (25) expression -> . STRING
    (26) expression -> . IDENTIFIER
    (27) expression -> . IDENTIFIER LPAREN args RPAREN

    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 12
    STRING          shift and go to state 13
    IDENTIFIER      shift and go to state 29

    expression                     shift and go to state 49

state 28

    (23) expression -> LPAREN expression . RPAREN
    (13) expression -> expression . PLUS expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . TIMES expression
    (16) expression -> expression . DIVIDE expression
    (17) expression -> expression . GT expression
    (18) expression -> expression . LT expression
    (19) expression -> expression . GE expression
    (20) expression -> expression . LE expression
    (21) expression -> expression . EQ expression
    (22) expression -> expression . NE expression

    RPAREN          shift and go to state 50
    PLUS            shift and go to state 17
    MINUS           shift and go to state 18
    TIMES           shift and go to state 19
    DIVIDE          shift and go to state 20
    GT              shift and go to state 21
    LT              shift and go to state 22
    GE              shift and go to state 23
    LE              shift and go to state 24
    EQ              shift and go to state 25
    NE              shift and go to state 26


state 29

    (26) expression -> IDENTIFIER .
    (27) expression -> IDENTIFIER . LPAREN args RPAREN

    RPAREN          reduce using rule 26 (expression -> IDENTIFIER .)
    PLUS            reduce using rule 26 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 26 (expression -> IDENTIFIER .)
    TIMES           reduce using rule 26 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 26 (expression -> IDENTIFIER .)
    GT              reduce using rule 26 (expression -> IDENTIFIER .)
    LT              reduce using rule 26 (expression -> IDENTIFIER .)
    GE              reduce using rule 26 (expression -> IDENTIFIER .)
    LE              reduce using rule 26 (expression -> IDENTIFIER .)
    EQ              reduce using rule 26 (expression -> IDENTIFIER .)
    NE              reduce using rule 26 (expression -> IDENTIFIER .)
    NEWLINE         reduce using rule 26 (expression -> IDENTIFIER .)
    $end            reduce using rule 26 (expression -> IDENTIFIER .)
    RBRACE          reduce using rule 26 (expression -> IDENTIFIER .)
    ELSE            reduce using rule 26 (expression -> IDENTIFIER .)
    COMMA           reduce using rule 26 (expression -> IDENTIFIER .)
    LPAREN          shift and go to state 16


state 30

    (9) statement -> WHILE LPAREN . expression RPAREN statement
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression GT expression
    (18) expression -> . expression LT expression
    (19) expression -> . expression GE expression
    (20) expression -> . expression LE expression
    (21) expression -> . expression EQ expression
    (22) expression -> . expression NE expression
    (23) expression -> . LPAREN expression RPAREN
    (24) expression -> . NUMBER
    (25) expression -> . STRING
    (26) expression -> . IDENTIFIER
    (27) expression -> . IDENTIFIER LPAREN args RPAREN

    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 12
    STRING          shift and go to state 13
    IDENTIFIER      shift and go to state 29

    expression                     shift and go to state 51

state 31

    (10) statement -> FOR LPAREN . IDENTIFIER IN expression RPAREN statement

    IDENTIFIER      shift and go to state 52


state 32

    (11) statement -> LBRACE statements . RBRACE
    (2) statements -> statements . NEWLINE statement

    RBRACE          shift and go to state 53
    NEWLINE         shift and go to state 14


state 33

    (12) statement -> LBRACE RBRACE .

    NEWLINE         reduce using rule 12 (statement -> LBRACE RBRACE .)
    $end            reduce using rule 12 (statement -> LBRACE RBRACE .)
    RBRACE          reduce using rule 12 (statement -> LBRACE RBRACE .)
    ELSE            reduce using rule 12 (statement -> LBRACE RBRACE .)


state 34

    (2) statements -> statements NEWLINE statement .

    NEWLINE         reduce using rule 2 (statements -> statements NEWLINE statement .)
    $end            reduce using rule 2 (statements -> statements NEWLINE statement .)
    RBRACE          reduce using rule 2 (statements -> statements NEWLINE statement .)


state 35

    (4) statement -> IDENTIFIER ASSIGN expression .
    (13) expression -> expression . PLUS expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . TIMES expression
    (16) expression -> expression . DIVIDE expression
    (17) expression -> expression . GT expression
    (18) expression -> expression . LT expression
    (19) expression -> expression . GE expression
    (20) expression -> expression . LE expression
    (21) expression -> expression . EQ expression
    (22) expression -> expression . NE expression
